--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^6.2",
         "laravel/helpers": "^1.6",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.1"
+        "laravel/ui": "^1.1",
+        "mews/purifier": "^3.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
